--- a/src/views/user.ejs
+++ b/src/views/user.ejs
@@ -16,8 +16,11 @@
     <div class="user-infor-container">
         <form method="POST" action="/users/create-user">
             <div class="container">
-                <div class="row">            
-                    <div class="mb-3 col-6 mt-3">
+                <div class="row">          
+                    <div class="mt-3">
+                      <h3>Create new user:</h3>
+                    </div>  
+                    <div class="mb-3 col-6">
                         <label for="email" class="form-label">Email address</label>
                         <input type="email" class="form-control" id="email" name = "email" required>
                     </div>
